# cookiecutter-data-science-mapc

./: .gitignore  README.md  ccds-help.json  ccds.json  pyproject.toml
ccds/: __main__.py
ccds/hook_utils/: dependencies.py
docs/docs/: index.md  opinions.md  using-the-template.md  v1.md
docs/scripts/: generate-termynal.py
hooks/: post_gen_project.py
src/{{ cookiecutter.repo_name }}/: .env
tests/: conftest.py  test_creation.py
{{ cookiecutter.__src_dir_name }}/{{ cookiecutter.repo_name }}/: Makefile
{{ cookiecutter.__src_dir_name }}/{{ cookiecutter.repo_name }}/docs/mkdocs/docs/: index.md
{{ cookiecutter.repo_name }}/: .env  Makefile  README.md  meta.yaml  meta.yml  pyproject.toml
{{ cookiecutter.repo_name }}/docs/mkdocs/docs/: getting-started.md
{{ cookiecutter.repo_name }}/notebooks/: 0.01-jtm-postgres-example.ipynb
{{ cookiecutter.repo_name }}/{{ cookiecutter.__src_dir_name }}/{{ cookiecutter.module_name }}/: config.py  datasets.py  plots.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/: config.py  dataset.py
